--- a/styles/formation-lego-board.css
+++ b/styles/formation-lego-board.css
@@ -1,5 +1,8 @@
 .formation-lego {
-  margin: 2rem 0;
+  margin: 0;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .formation-lego__controls {
